--- a/estate_payroll/i18n/id.po
+++ b/estate_payroll/i18n/id.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 9.0c-20160712\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-09-29 05:53+0000\n"
-"PO-Revision-Date: 2016-09-29 14:20+0700\n"
+"POT-Creation-Date: 2016-10-05 02:02+0000\n"
+"PO-Revision-Date: 2016-10-05 10:53+0700\n"
 "Last-Translator: Odoo <cayadi.sutanto@palmagroup.co.id>\n"
 "Language-Team: palma group\n"
 "Language: id\n"
@@ -19,13 +19,18 @@ msgstr ""
 
 #. module: estate_payroll
 #: model:ir.ui.view,arch_db:estate_payroll.report_estate_payslip
-msgid "<strong>Total Other</strong>"
-msgstr "<strong>Total Lain</strong>"
+msgid "(Leader"
+msgstr ""
 
 #. module: estate_payroll
 #: model:ir.ui.view,arch_db:estate_payroll.report_estate_payslip
-msgid "<strong>Total Payslip</strong>"
-msgstr "<strong>Total Payslip</strong>"
+msgid "<br/>Asisten"
+msgstr ""
+
+#. module: estate_payroll
+#: model:ir.ui.view,arch_db:estate_payroll.report_estate_payslip
+msgid "<strong>Total Other</strong>"
+msgstr "<strong>Total Lain</strong>"
 
 #. module: estate_payroll
 #: model:ir.ui.view,arch_db:estate_payroll.report_estate_payslip
@@ -34,13 +39,58 @@ msgstr "<strong>Total</strong>"
 
 #. module: estate_payroll
 #: model:ir.ui.view,arch_db:estate_payroll.report_estate_payslip
+msgid "<u>Agus Prabowo</u><br/>Estate Manager"
+msgstr ""
+
+#. module: estate_payroll
+#: model:ir.ui.view,arch_db:estate_payroll.report_estate_payslip
+msgid "<u>Ekos Albar</u><br/>Direktur"
+msgstr ""
+
+#. module: estate_payroll
+#: model:ir.ui.view,arch_db:estate_payroll.report_estate_payslip
+msgid "<u>Eny Maryoto</u><br/>Kerani"
+msgstr ""
+
+#. module: estate_payroll
+#: model:ir.ui.view,arch_db:estate_payroll.report_estate_payslip
+msgid "<u>Mertha Lidyawati</u><br/>HR Manager"
+msgstr ""
+
+#. module: estate_payroll
+#: model:ir.ui.view,arch_db:estate_payroll.report_estate_payslip
+msgid "<u>Muh Wahid A.A.</u><br/>Kase"
+msgstr ""
+
+#. module: estate_payroll
+#: model:ir.ui.view,arch_db:estate_payroll.report_estate_payslip
+msgid "<u>NN</u><br/>KTU"
+msgstr ""
+
+#. module: estate_payroll
+#: model:ir.ui.view,arch_db:estate_payroll.report_estate_payslip
+msgid "<u>Petrus T. Wijoyo</u><br/>Ka Perwakilan"
+msgstr ""
+
+#. module: estate_payroll
+#: model:ir.ui.view,arch_db:estate_payroll.report_estate_payslip
 msgid "ADJ"
+msgstr "ADJ"
+
+#. module: estate_payroll
+#: model:ir.ui.view,arch_db:estate_payroll.report_estate_payslip
+msgid "Acknowledge By"
 msgstr ""
 
 #. module: estate_payroll
 #: model:ir.ui.view,arch_db:estate_payroll.report_estate_payslip
 msgid "Allowance"
 msgstr "Tunjangan"
+
+#. module: estate_payroll
+#: model:ir.ui.view,arch_db:estate_payroll.report_estate_payslip
+msgid "Approved By"
+msgstr ""
 
 #. module: estate_payroll
 #: model:ir.ui.view,arch_db:estate_payroll.inherited_hr_payslip_run_form
@@ -83,14 +133,24 @@ msgid "By Estate/Division create Payslip Batches for Estate."
 msgstr "Payroll berdasar Per Kebun/Divisi."
 
 #. module: estate_payroll
+#: model:ir.ui.view,arch_db:estate_payroll.report_estate_payslip
+msgid "Checked By"
+msgstr ""
+
+#. module: estate_payroll
 #: model:ir.model.fields,field_description:estate_payroll.field_hr_payslip_contract_type_id
 msgid "Contract Type"
 msgstr "Tipe Kontrak"
 
 #. module: estate_payroll
 #: model:ir.ui.view,arch_db:estate_payroll.report_estate_payslip
+msgid "Created By"
+msgstr ""
+
+#. module: estate_payroll
+#: model:ir.ui.view,arch_db:estate_payroll.report_estate_payslip
 msgid "Day"
-msgstr "Hari"
+msgstr "HK"
 
 #. module: estate_payroll
 #: model:ir.ui.view,arch_db:estate_payroll.report_estate_payslip
@@ -102,21 +162,6 @@ msgstr "Potongan"
 #: model:ir.model.fields,help:estate_payroll.field_hr_payslip_payroll_location_id
 msgid "Define alternate location of payroll disbursement other than division"
 msgstr "Tentukan lokasi alternatif penggajian bila berbeda dengan divisi."
-
-#. module: estate_payroll
-#: model:ir.ui.view,arch_db:estate_payroll.report_estate_payslip
-msgid "Dibuat Oleh"
-msgstr ""
-
-#. module: estate_payroll
-#: model:ir.ui.view,arch_db:estate_payroll.report_estate_payslip
-msgid "Diperiksa Oleh"
-msgstr ""
-
-#. module: estate_payroll
-#: model:ir.ui.view,arch_db:estate_payroll.report_estate_payslip
-msgid "Disetujui Oleh"
-msgstr ""
 
 #. module: estate_payroll
 #: model:ir.model.fields,field_description:estate_payroll.field_report_estate_payroll_report_estate_payslip_display_name
@@ -132,7 +177,7 @@ msgstr "Divisi"
 #. module: estate_payroll
 #: model:ir.ui.view,arch_db:estate_payroll.report_estate_payslip
 msgid "EDW"
-msgstr ""
+msgstr "Gaji"
 
 #. module: estate_payroll
 #: model:ir.model.fields,help:estate_payroll.field_hr_payslip_team_id
@@ -156,12 +201,17 @@ msgstr "Hari kerja dibayar"
 #: code:addons/estate_payroll/models/inherited_hr_payslip.py:89
 #, python-format
 msgid "Estate Worker"
-msgstr "Tenaga Kerja"
+msgstr "Estate Worker"
 
 #. module: estate_payroll
 #: model:ir.model,name:estate_payroll.model_hr_payslip_employees
 msgid "Generate payslips for all selected employees"
 msgstr "Buat payslip untuk seluruh karyawan yang dipilih"
+
+#. module: estate_payroll
+#: model:ir.ui.view,arch_db:estate_payroll.report_estate_payslip
+msgid "Hour"
+msgstr "Jam"
 
 #. module: estate_payroll
 #: model:ir.model.fields,field_description:estate_payroll.field_report_estate_payroll_report_estate_payslip_id
@@ -189,7 +239,7 @@ msgstr ""
 #: model:ir.ui.view,arch_db:estate_payroll.report_estate_payslip
 #, python-format
 msgid "OT"
-msgstr "L"
+msgstr "OT"
 
 #. module: estate_payroll
 #: model:ir.ui.view,arch_db:estate_payroll.report_estate_payslip
@@ -207,7 +257,7 @@ msgstr "Lembur"
 #: model:ir.ui.view,arch_db:estate_payroll.report_estate_payslip
 #, python-format
 msgid "PR"
-msgstr "Target"
+msgstr "PR"
 
 #. module: estate_payroll
 #: model:ir.model,name:estate_payroll.model_hr_payslip
@@ -261,6 +311,11 @@ msgstr "Tanda Tangan"
 #. module: estate_payroll
 #: model:ir.ui.view,arch_db:estate_payroll.report_estate_payslip
 msgid "Sub Total"
+msgstr ""
+
+#. module: estate_payroll
+#: model:ir.ui.view,arch_db:estate_payroll.report_estate_payslip
+msgid "Sub Total Team"
 msgstr ""
 
 #. module: estate_payroll
@@ -333,6 +388,9 @@ msgstr ""
 #: model:ir.model,name:estate_payroll.model_report_estate_payroll_report_estate_payslip
 msgid "report.estate_payroll.report_estate_payslip"
 msgstr ""
+
+#~ msgid "<strong>Total Payslip</strong>"
+#~ msgstr "<strong>Total Payslip</strong>"
 
 #~ msgid "Define location of payroll disbursement"
 #~ msgstr "Lokasi pembagian payroll"
