--- a/estate_payroll/i18n/id.po
+++ b/estate_payroll/i18n/id.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 9.0c-20160712\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-03-30 06:21+0000\n"
-"PO-Revision-Date: 2017-03-30 13:41+0700\n"
+"POT-Creation-Date: 2017-04-06 08:56+0000\n"
+"PO-Revision-Date: 2017-04-06 16:01+0700\n"
 "Last-Translator: Odoo <cayadi.sutanto@palmagroup.co.id>\n"
 "Language-Team: palma group\n"
 "Language: id\n"
@@ -74,6 +74,11 @@ msgstr ""
 
 #. module: estate_payroll
 #: model:ir.ui.view,arch_db:estate_payroll.report_estate_payslip
+msgid "<strong>Perusahaan</strong>"
+msgstr ""
+
+#. module: estate_payroll
+#: model:ir.ui.view,arch_db:estate_payroll.report_estate_payslip
 msgid "<strong>Total</strong>"
 msgstr "<strong>Total</strong>"
 
@@ -103,6 +108,11 @@ msgid "<u>Petrus T. Wijoyo</u><br/>GM Operation"
 msgstr ""
 
 #. module: estate_payroll
+#: model:ir.ui.view,arch_db:estate_payroll.payslip_upkeep_labour_view_tree
+msgid "Activity"
+msgstr ""
+
+#. module: estate_payroll
 #: model:ir.ui.view,arch_db:estate_payroll.inherited_hr_payslip_run_form
 msgid "Are you sure to close this payslip run?"
 msgstr "Apakah Anda yakin untuk menutup payroll ini?"
@@ -111,6 +121,17 @@ msgstr "Apakah Anda yakin untuk menutup payroll ini?"
 #: model:ir.ui.view,arch_db:estate_payroll.inherited_hr_payslip_run_form
 msgid "Are you sure to reopen this payslip run?"
 msgstr "Apakah Anda yakin untuk membuka kembali payroll ini?"
+
+#. module: estate_payroll
+#: model:ir.ui.view,arch_db:estate_payroll.payslip_upkeep_labour_view_tree
+msgid "Attn."
+msgstr "Kode Absen"
+
+#. module: estate_payroll
+#: model:ir.actions.report.xml,name:estate_payroll.action_report_bpjs
+#: model:ir.model.fields,field_description:estate_payroll.field_hr_salary_rule_bpjs
+msgid "BPJS"
+msgstr ""
 
 #. module: estate_payroll
 #: model:ir.ui.view,arch_db:estate_payroll.report_estate_payslip
@@ -143,9 +164,40 @@ msgid "By Estate/Division create Payslip Batches for Estate."
 msgstr "Payroll berdasar Per Kebun/Divisi."
 
 #. module: estate_payroll
+#: model:ir.model.fields,field_description:estate_payroll.field_hr_payslip_run_company_id
+#: model:ir.ui.view,arch_db:estate_payroll.inherited_view_hr_payslip_filter
+msgid "Company"
+msgstr "Perusahaan"
+
+#. module: estate_payroll
 #: model:ir.model.fields,field_description:estate_payroll.field_hr_payslip_contract_type_id
 msgid "Contract Type"
 msgstr "Tipe Kontrak"
+
+#. module: estate_payroll
+#: model:ir.ui.view,arch_db:estate_payroll.payslip_upkeep_labour_view_tree
+msgid "Ctr."
+msgstr ""
+
+#. module: estate_payroll
+#: model:ir.ui.view,arch_db:estate_payroll.payslip_upkeep_labour_view_tree
+msgid "D Wage"
+msgstr "Rp. HK"
+
+#. module: estate_payroll
+#: model:ir.ui.view,arch_db:estate_payroll.payslip_upkeep_labour_view_tree
+msgid "D/Q"
+msgstr ""
+
+#. module: estate_payroll
+#: model:ir.ui.view,arch_db:estate_payroll.payslip_upkeep_labour_view_tree
+msgid "Date"
+msgstr "Tanggal"
+
+#. module: estate_payroll
+#: model:ir.ui.view,arch_db:estate_payroll.payslip_upkeep_labour_view_tree
+msgid "Day(s)"
+msgstr "HK"
 
 #. module: estate_payroll
 #: model:ir.model.fields,help:estate_payroll.field_estate_hr_team_payroll_location_id
@@ -174,6 +226,7 @@ msgid "Disetujui oleh,"
 msgstr ""
 
 #. module: estate_payroll
+#: model:ir.model.fields,field_description:estate_payroll.field_report_estate_payroll_report_bpjs_display_name
 #: model:ir.model.fields,field_description:estate_payroll.field_report_estate_payroll_report_estate_payslip_display_name
 msgid "Display Name"
 msgstr "Nama Yang Ditampilkan"
@@ -182,6 +235,23 @@ msgstr "Nama Yang Ditampilkan"
 #: model:ir.model.fields,field_description:estate_payroll.field_hr_payslip_run_division_id
 msgid "Division"
 msgstr "Divisi"
+
+#. module: estate_payroll
+#: code:addons/estate_payroll/report/report_bpjs.py:51
+#, python-format
+msgid "Divorced"
+msgstr "Cerai"
+
+#. module: estate_payroll
+#: model:ir.ui.view,arch_db:estate_payroll.payslip_upkeep_labour_view_tree
+#: model:ir.ui.view,arch_db:estate_payroll.report_bpjs
+msgid "Employee"
+msgstr "Karyawan"
+
+#. module: estate_payroll
+#: model:ir.ui.view,arch_db:estate_payroll.report_bpjs
+msgid "Employee Number"
+msgstr "NIK"
 
 #. module: estate_payroll
 #: model:ir.model.fields,help:estate_payroll.field_hr_payslip_team_id
@@ -199,22 +269,33 @@ msgid "Estate Payslip List"
 msgstr "Daftar Upah KHL"
 
 #. module: estate_payroll
-#: code:addons/estate_payroll/models/inherited_hr_payslip.py:82
+#: code:addons/estate_payroll/models/inherited_hr_payslip.py:88
 #, python-format
 msgid "Estate Upkeep Working Days paid at 100%"
 msgstr "Hari kerja dibayar"
 
 #. module: estate_payroll
-#: code:addons/estate_payroll/models/inherited_hr_payslip.py:71
-#: code:addons/estate_payroll/models/inherited_hr_payslip.py:130
+#: code:addons/estate_payroll/models/inherited_hr_payslip.py:77
+#: code:addons/estate_payroll/models/inherited_hr_payslip.py:136
 #, python-format
 msgid "Estate Worker"
 msgstr "Estate Worker"
 
 #. module: estate_payroll
+#: code:addons/estate_payroll/report/report_bpjs.py:50
+#, python-format
+msgid "Female"
+msgstr "Perempuan"
+
+#. module: estate_payroll
 #: model:ir.ui.view,arch_db:estate_payroll.report_estate_payslip
 msgid "Gaji"
 msgstr ""
+
+#. module: estate_payroll
+#: model:ir.ui.view,arch_db:estate_payroll.report_bpjs
+msgid "Gender"
+msgstr "Jenis Kelamin"
 
 #. module: estate_payroll
 #: model:ir.model,name:estate_payroll.model_hr_payslip_employees
@@ -224,18 +305,44 @@ msgstr "Buat payslip untuk seluruh karyawan yang dipilih"
 #. module: estate_payroll
 #: model:ir.ui.view,arch_db:estate_payroll.report_estate_payslip
 msgid "HK"
-msgstr ""
+msgstr "HK"
 
 #. module: estate_payroll
+#: model:ir.model.fields,field_description:estate_payroll.field_report_estate_payroll_report_bpjs_id
 #: model:ir.model.fields,field_description:estate_payroll.field_report_estate_payroll_report_estate_payslip_id
 #: model:ir.ui.view,arch_db:estate_payroll.report_estate_payslip
 msgid "ID"
 msgstr ""
 
 #. module: estate_payroll
+#: model:ir.ui.view,arch_db:estate_payroll.report_bpjs
+msgid "JHT P"
+msgstr ""
+
+#. module: estate_payroll
+#: model:ir.ui.view,arch_db:estate_payroll.report_bpjs
+msgid "JHT TK"
+msgstr ""
+
+#. module: estate_payroll
+#: model:ir.ui.view,arch_db:estate_payroll.report_bpjs
+msgid "JKK (0.54%)"
+msgstr ""
+
+#. module: estate_payroll
+#: model:ir.ui.view,arch_db:estate_payroll.report_bpjs
+msgid "JKM (0.3%)"
+msgstr ""
+
+#. module: estate_payroll
 #: model:ir.ui.view,arch_db:estate_payroll.report_estate_payslip
 msgid "Jam Lembur"
 msgstr ""
+
+#. module: estate_payroll
+#: model:ir.ui.view,arch_db:estate_payroll.report_bpjs
+msgid "Join Date"
+msgstr "TMK"
 
 #. module: estate_payroll
 #: model:ir.ui.view,arch_db:estate_payroll.report_estate_payslip
@@ -258,14 +365,52 @@ msgid "Lain-Lain"
 msgstr ""
 
 #. module: estate_payroll
+#: model:ir.model.fields,field_description:estate_payroll.field_report_estate_payroll_report_bpjs___last_update
 #: model:ir.model.fields,field_description:estate_payroll.field_report_estate_payroll_report_estate_payslip___last_update
 msgid "Last Modified on"
 msgstr "Dimodifikasi pada"
 
 #. module: estate_payroll
+#: model:ir.model.fields,help:estate_payroll.field_hr_payslip_run_company_id
+msgid "Limit payroll based on employee company."
+msgstr ""
+
+#. module: estate_payroll
+#: model:ir.ui.view,arch_db:estate_payroll.payslip_upkeep_labour_view_tree
+msgid "Location"
+msgstr "Lokasi"
+
+#. module: estate_payroll
+#: code:addons/estate_payroll/report/report_bpjs.py:50
+#, python-format
+msgid "Male"
+msgstr "Laki-Laki"
+
+#. module: estate_payroll
+#: model:ir.ui.view,arch_db:estate_payroll.report_bpjs
+msgid "Marital"
+msgstr "Status"
+
+#. module: estate_payroll
+#: model:ir.model.fields,help:estate_payroll.field_hr_salary_rule_bpjs
+msgid "Marked to appear at BPJS Report."
+msgstr "Tandai sebagai bagian laporan BPJS."
+
+#. module: estate_payroll
+#: code:addons/estate_payroll/report/report_bpjs.py:51
+#, python-format
+msgid "Married"
+msgstr "Menikah"
+
+#. module: estate_payroll
 #: model:ir.ui.view,arch_db:estate_payroll.report_estate_payslip
 msgid "Name"
 msgstr "Nama"
+
+#. module: estate_payroll
+#: model:ir.ui.view,arch_db:estate_payroll.report_bpjs
+msgid "No"
+msgstr ""
 
 #. module: estate_payroll
 #: model:ir.ui.view,arch_db:estate_payroll.report_estate_payslip
@@ -278,22 +423,45 @@ msgid "Non Kemandoran"
 msgstr ""
 
 #. module: estate_payroll
-#: code:addons/estate_payroll/models/inherited_hr_payslip.py:141
+#: code:addons/estate_payroll/models/inherited_hr_payslip.py:147
+#: model:ir.ui.view,arch_db:estate_payroll.payslip_upkeep_labour_view_tree
 #, python-format
 msgid "OT"
 msgstr "OT"
 
 #. module: estate_payroll
-#: code:addons/estate_payroll/models/inherited_hr_payslip.py:140
+#: model:ir.ui.view,arch_db:estate_payroll.payslip_upkeep_labour_view_tree
+msgid "OT Wage"
+msgstr "Rp. L"
+
+#. module: estate_payroll
+#: code:addons/estate_payroll/report/report_bpjs.py:50
+#, python-format
+msgid "Other Gender"
+msgstr "Lainnya"
+
+#. module: estate_payroll
+#: code:addons/estate_payroll/models/inherited_hr_payslip.py:146
 #, python-format
 msgid "Overtime"
 msgstr "Lembur"
 
 #. module: estate_payroll
-#: code:addons/estate_payroll/models/inherited_hr_payslip.py:152
+#: code:addons/estate_payroll/models/inherited_hr_payslip.py:158
+#: model:ir.ui.view,arch_db:estate_payroll.payslip_upkeep_labour_view_tree
 #, python-format
 msgid "PR"
 msgstr "PR"
+
+#. module: estate_payroll
+#: model:ir.ui.view,arch_db:estate_payroll.payslip_upkeep_labour_view_tree
+msgid "PR Wage"
+msgstr "Rp. Premi"
+
+#. module: estate_payroll
+#: model:ir.ui.view,arch_db:estate_payroll.payslip_upkeep_labour_view_tree
+msgid "PY"
+msgstr "TT"
 
 #. module: estate_payroll
 #: model:ir.ui.view,arch_db:estate_payroll.report_estate_payslip
@@ -304,6 +472,11 @@ msgstr ""
 #: model:ir.model,name:estate_payroll.model_hr_payslip
 msgid "Pay Slip"
 msgstr "Payslip"
+
+#. module: estate_payroll
+#: model:ir.ui.view,arch_db:estate_payroll.inherited_hr_salary_rule_form
+msgid "Payroll"
+msgstr "Payroll"
 
 #. module: estate_payroll
 #: model:ir.model.fields,field_description:estate_payroll.field_estate_hr_team_payroll_location_id
@@ -334,19 +507,24 @@ msgid "Penghasilan Bersih"
 msgstr ""
 
 #. module: estate_payroll
-#: code:addons/estate_payroll/models/inherited_hr_payslip.py:151
+#: model:ir.ui.view,arch_db:estate_payroll.report_bpjs
+msgid "Period:"
+msgstr "Periode:"
+
+#. module: estate_payroll
+#: code:addons/estate_payroll/models/inherited_hr_payslip.py:157
 #, python-format
 msgid "Piece Rate"
 msgstr "Target"
 
 #. module: estate_payroll
-#: code:addons/estate_payroll/models/inherited_hr_payslip.py:96
+#: code:addons/estate_payroll/models/inherited_hr_payslip.py:102
 #, python-format
 msgid "Piece Rate Working Days"
 msgstr "Premi Pengganti HK"
 
 #. module: estate_payroll
-#: code:addons/estate_payroll/models/inherited_hr_payslip.py:126
+#: code:addons/estate_payroll/models/inherited_hr_payslip.py:132
 #, python-format
 msgid "Please check all employee contract date should be in period of payroll batch."
 msgstr ""
@@ -356,6 +534,26 @@ msgstr ""
 #. module: estate_payroll
 #: model:ir.ui.view,arch_db:estate_payroll.report_estate_payslip
 msgid "Potongan"
+msgstr ""
+
+#. module: estate_payroll
+#: model:ir.ui.view,arch_db:estate_payroll.payslip_upkeep_labour_view_tree
+msgid "Prod (%)"
+msgstr ""
+
+#. module: estate_payroll
+#: model:ir.ui.view,arch_db:estate_payroll.payslip_upkeep_labour_view_tree
+msgid "Productivity"
+msgstr "Produktifitas"
+
+#. module: estate_payroll
+#: model:ir.ui.view,arch_db:estate_payroll.payslip_upkeep_labour_view_tree
+msgid "Q/D"
+msgstr ""
+
+#. module: estate_payroll
+#: model:ir.ui.view,arch_db:estate_payroll.payslip_upkeep_labour_view_tree
+msgid "Qty."
 msgstr ""
 
 #. module: estate_payroll
@@ -369,6 +567,11 @@ msgid "Rekapitulasi Daftar Upah Kemandoran"
 msgstr ""
 
 #. module: estate_payroll
+#: model:ir.ui.view,arch_db:estate_payroll.report_bpjs
+msgid "Rincian Iuran Tenaga Kerja"
+msgstr ""
+
+#. module: estate_payroll
 #: model:ir.ui.view,arch_db:estate_payroll.report_estate_payslip
 msgid "Rp Lembur"
 msgstr ""
@@ -379,15 +582,31 @@ msgid "Rp Premi"
 msgstr ""
 
 #. module: estate_payroll
-#: model:ir.ui.view,arch_db:estate_payroll.report_estate_payslip
-msgid "Sub Total Team"
-msgstr ""
+#: model:ir.model,name:estate_payroll.model_hr_payroll_structure
+msgid "Salary Structure"
+msgstr "Struktur Gaji"
 
 #. module: estate_payroll
-#: code:addons/estate_payroll/models/inherited_hr_payslip_run.py:139
+#: code:addons/estate_payroll/report/report_bpjs.py:51
+#, python-format
+msgid "Single"
+msgstr "Belum Kawin"
+
+#. module: estate_payroll
+#: model:ir.ui.view,arch_db:estate_payroll.report_estate_payslip
+msgid "Sub Total Team"
+msgstr "Sub Total Kemandoran"
+
+#. module: estate_payroll
+#: code:addons/estate_payroll/models/inherited_hr_payslip_run.py:140
 #, python-format
 msgid "System print-out Payroll report: %s;%s;%s;%s"
 msgstr "Cetak laporan payroll: %s;%s;%s;%s"
+
+#. module: estate_payroll
+#: model:ir.ui.view,arch_db:estate_payroll.report_estate_payslip
+msgid "TK"
+msgstr ""
 
 #. module: estate_payroll
 #: model:ir.ui.view,arch_db:estate_payroll.report_estate_payslip
@@ -397,6 +616,7 @@ msgstr ""
 #. module: estate_payroll
 #: model:ir.model.fields,field_description:estate_payroll.field_hr_payslip_team_id
 #: model:ir.ui.view,arch_db:estate_payroll.inherited_view_hr_payslip_filter
+#: model:ir.ui.view,arch_db:estate_payroll.payslip_upkeep_labour_view_tree
 msgid "Team"
 msgstr "Kemandoran"
 
@@ -406,9 +626,34 @@ msgid "Team ids"
 msgstr "Kemandoran"
 
 #. module: estate_payroll
+#: model:ir.ui.view,arch_db:estate_payroll.report_bpjs
+msgid "Total"
+msgstr ""
+
+#. module: estate_payroll
+#: model:ir.model.fields,field_description:estate_payroll.field_estate_upkeep_total_labour
+msgid "Total Labour"
+msgstr "Total TK"
+
+#. module: estate_payroll
 #: model:ir.ui.view,arch_db:estate_payroll.report_estate_payslip
 msgid "Total Lain-Lain"
 msgstr ""
+
+#. module: estate_payroll
+#: model:ir.model.fields,field_description:estate_payroll.field_estate_upkeep_total_number_of_day
+msgid "Total Number of Day"
+msgstr "Total HK"
+
+#. module: estate_payroll
+#: model:ir.model.fields,field_description:estate_payroll.field_estate_upkeep_total_overtime
+msgid "Total Overtime Hours"
+msgstr "Total Jam Lembur"
+
+#. module: estate_payroll
+#: model:ir.model.fields,field_description:estate_payroll.field_estate_upkeep_total_piece_rate
+msgid "Total Piece Rate Amount"
+msgstr "Total Rp Premi"
 
 #. module: estate_payroll
 #: model:ir.ui.view,arch_db:estate_payroll.report_estate_payslip
@@ -419,6 +664,11 @@ msgstr ""
 #: model:ir.ui.view,arch_db:estate_payroll.report_estate_payslip
 msgid "Type"
 msgstr "Tipe"
+
+#. module: estate_payroll
+#: model:ir.ui.view,arch_db:estate_payroll.payslip_upkeep_labour_view_tree
+msgid "UoM"
+msgstr ""
 
 #. module: estate_payroll
 #: model:ir.ui.view,arch_db:estate_payroll.report_estate_payslip
@@ -438,13 +688,30 @@ msgid "Upkeep Labour"
 msgstr "Penggunaan HK"
 
 #. module: estate_payroll
-#: code:addons/estate_payroll/models/inherited_hr_payslip.py:186
+#: code:addons/estate_payroll/models/inherited_hr_payslip.py:192
 #, python-format
 msgid "Upkeep Labour Records %s"
 msgstr "Data Penggunaan HK %s"
 
 #. module: estate_payroll
-#: code:addons/estate_payroll/models/inherited_hr_payslip_run.py:126
+#: model:ir.ui.view,arch_db:estate_payroll.payslip_upkeep_labour_view_tree
+msgid "W/Q"
+msgstr ""
+
+#. module: estate_payroll
+#: model:ir.ui.view,arch_db:estate_payroll.payslip_upkeep_labour_view_tree
+#: model:ir.ui.view,arch_db:estate_payroll.report_bpjs
+msgid "Wage"
+msgstr "Upah"
+
+#. module: estate_payroll
+#: code:addons/estate_payroll/report/report_bpjs.py:51
+#, python-format
+msgid "Widower"
+msgstr "Duda/Janda"
+
+#. module: estate_payroll
+#: code:addons/estate_payroll/models/inherited_hr_payslip_run.py:127
 #, python-format
 msgid "You cannot delete closed Payslip."
 msgstr "Anda tidak boleh menghapus payslip final."
@@ -452,6 +719,16 @@ msgstr "Anda tidak boleh menghapus payslip final."
 #. module: estate_payroll
 #: model:ir.model,name:estate_payroll.model_estate_hr_team
 msgid "estate.hr.team"
+msgstr ""
+
+#. module: estate_payroll
+#: model:ir.model,name:estate_payroll.model_hr_salary_rule
+msgid "hr.salary.rule"
+msgstr ""
+
+#. module: estate_payroll
+#: model:ir.model,name:estate_payroll.model_report_estate_payroll_report_bpjs
+msgid "report.estate_payroll.report_bpjs"
 msgstr ""
 
 #. module: estate_payroll
@@ -483,9 +760,6 @@ msgstr ""
 #~ msgid "Other"
 #~ msgstr "Lainnya"
 
-#~ msgid "Payroll"
-#~ msgstr "Payroll"
-
 #~ msgid "Payslip List"
 #~ msgstr "Daftar Payslip"
 
@@ -494,9 +768,6 @@ msgstr ""
 
 #~ msgid "Tax"
 #~ msgstr "Pajak"
-
-#~ msgid "Wage"
-#~ msgstr "Upah"
 
 #~ msgid "<strong>Total Payslip</strong>"
 #~ msgstr "<strong>Total Payslip</strong>"
